import java.io.Serializable;
abstract public class MiniClasaMeaObject implements Serializable {}